rke2/garage-system/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: garage-system
  labels:
    app.kubernetes.io/name: garage
